chore: 更新.gitignore并优化Dockerfile和脚本
更新.gitignore以忽略docker-sandbox/tmp目录，优化Dockerfile以安装pandas和openpyxl依赖，并调整run_in_sandbox.bat脚本以支持参数化执行。此外，新增prompt_to_excel_example.py示例脚本，用于生成和拆分Excel文件。

--- a/docker-sandbox/Dockerfile
+++ b/docker-sandbox/Dockerfile
@@ -2,7 +2,7 @@ FROM library/python
 
 # Install build dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir smolagents[openai] gradio_client && \
+    pip install --no-cache-dir smolagents[openai] gradio_client pandas openpyxl && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
