feat: 添加Docker沙盒环境及相关功能
- 新增Docker沙盒环境，用于安全执行不受信任的代码
- 添加`docker-sandbox`模块，支持代码执行、容器管理等功能
- 更新`Dockerfile`以支持更多依赖包
- 新增`gradio_ui.py`，提供基于Gradio的交互式UI
- 更新`.gitignore`，忽略`docker-sandbox/workspace`目录
- 新增`requirements.txt`，列出项目依赖

--- a/docker-sandbox/Dockerfile
+++ b/docker-sandbox/Dockerfile
@@ -2,7 +2,8 @@ FROM library/python
 
 # Install build dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir smolagents[openai] gradio_client pandas openpyxl && \
+    pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple \
+    smolagents[openai,litellm,mcp] gradio_client pandas openpyxl mcp-server-fetch && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
